<resources>
    <string name="app_name">ADA</string>
    <string name="button_text">Login</string>
    <string name="register_text"><u>Sign Up here</u></string>
    <string name="user_text">Email</string>
    <string name="password_text">Password</string>
    <string name="Name">Name</string>
    <string name="CreateUsername">Email</string>
    <string name="CreatePassword">Create password</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="SignUp">Sign Up</string>
    <string name="AppName">ADA</string>
    <string name="UserIcon">&amp;#xf007;</string>
    <string name="PlusSign">+</string>
    <string name="Void"> </string>
    <string name="Concentration">Concentration</string>
    <string name="Add">Add</string>
    <string name="x">x</string>
    <string name="TypeConcentration">Type concentration</string>
    <string name="Unit">μg/mL</string>
    <string name="Symptom1">Symptom 1</string>
    <string name="Symptom2">Symptom 2</string>
    <string name="Symptom3">Symptom 3</string>
    <string name="Symptom4">Symptom 4</string>
    <string name="Symptom5">Symptom 5</string>
    <string name="JointPain">Joint pain</string>
    <string name="RestrictedJointMovement">Restricted joint movement</string>
    <string name="Inflammation">Inflammation</string>
    <string name="Weakness">Weakness</string>
    <string name="Fatigue">Fatigue</string>
    <string name="Update">Update</string>
    <string name="Comments">Type a comment</string>
    <string name="TeamText">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
</resources>
