<?xml version="1.0" encoding="utf-8"?>
<!-- Main container, background color defined here -->
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/add_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".Activities.AddActivity"
    android:gravity="center_horizontal">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/botRelAdd"
            android:id="@+id/midRelAdd">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layoutbw"
                android:focusableInTouchMode="true"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/daytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textAlignment="center"
                    android:textColor="@color/MainBlue"
                    android:textSize="70sp"
                    app:layout_constraintBottom_toTopOf="@id/monthtext"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:hint="DAY" />

                <TextView
                    android:id="@+id/monthtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="MONTH"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toTopOf="@id/concentrationtext"
                    app:layout_constraintEnd_toStartOf="@+id/yeartext"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daytext"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/yeartext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="YEAR"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toTopOf="@id/concentrationtext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/monthtext"
                    app:layout_constraintTop_toBottomOf="@id/daytext"
                    app:layout_constraintVertical_bias="0.0" />


                <EditText
                    android:id="@+id/concentrationtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/MainBlue"
                    android:cursorVisible="true"
                    android:hint="@string/TypeConcentration"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/MainBlue"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/symptom1text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/units"
                    app:layout_constraintTop_toBottomOf="@id/monthtext" />

                <TextView
                    android:id="@+id/units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/Unit"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/symptom1text"
                    app:layout_constraintLeft_toRightOf="@id/concentrationtext"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/yeartext"
                    app:layout_constraintVertical_bias="0.25" />

                <TextView
                    android:id="@+id/symptom1text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Symptom1"
                    android:textColor="@color/MainBlue"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/seekbar_1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/concentrationtext"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_marginTop="30dp" />

                <SeekBar
                    android:id="@+id/seekbar_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="4"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toTopOf="@id/symptom2text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/symptom1text" />

                <TextView
                    android:id="@+id/symptom2text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/Symptom2"
                    android:textColor="@color/MainBlue"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/seekbar_2"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seekbar_1" />

                <SeekBar
                    android:id="@+id/seekbar_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="4"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toTopOf="@id/symptom3text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/symptom2text" />

                <TextView
                    android:id="@+id/symptom3text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/Symptom3"
                    android:textColor="@color/MainBlue"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/seekbar_3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seekbar_2"/>

                <SeekBar
                    android:id="@+id/seekbar_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="4"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toTopOf="@id/symptom4text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/symptom3text"/>

                <TextView
                    android:id="@+id/symptom4text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/Symptom4"
                    android:textColor="@color/MainBlue"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/seekbar_4"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seekbar_3" />

                <SeekBar
                    android:id="@+id/seekbar_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="4"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toTopOf="@id/symptom5text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/symptom4text" />

                <TextView
                    android:id="@+id/symptom5text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/Symptom5"
                    android:textColor="@color/MainBlue"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/seekbar_5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seekbar_4" />

                <SeekBar
                    android:id="@+id/seekbar_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:max="4"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/thumb"
                    app:layout_constraintBottom_toTopOf="@id/comments_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/symptom5text" />


                <EditText
                    android:id="@+id/comments_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="10"
                    android:minLines="5"
                    android:maxLines="15"
                    app:layout_constraintTop_toBottomOf="@id/seekbar_5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/AddButton"
                    android:layout_marginTop="40dp"
                    android:hint="@string/Comments"
                    android:gravity="top|left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/Black"
                    android:background="@drawable/comments_text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"/>

                <Button
                    android:id="@+id/AddButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/big_addbtn"
                    android:gravity="center"
                    android:text="@string/Add"
                    android:textColor="@color/MainBlue"
                    android:textColorHint="@color/MainBlue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/comments_text" />


            </android.support.constraint.ConstraintLayout>


        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/botRelAdd"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavAdd"
                android:background="@drawable/dtrial"
                app:menu="@menu/main_menu"
                app:labelVisibilityMode="unlabeled">

            </android.support.design.widget.BottomNavigationView>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>






