<?xml version="1.0" encoding="utf-8"?>
<!-- Main container, background color defined here -->
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    android:paddingBottom="16dp"
    tools:context="MainActivity"
    android:orientation="vertical"
    android:background="@color/MainBlue"
    android:gravity="center">

    <!-- Username+Password+Icons container -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_user"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"

        android:orientation="vertical"
        >
        <!-- Username container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal"
            >

            <!-- User Icon -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"

                android:text="&#xf007;"
                android:textSize="18sp"
                app:fontFamily="@font/fontawesome"
                android:textColor="@color/LightGrey"/>

            <!-- Username EditText -->
            <EditText
                android:id="@+id/Logintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/MainBlue"
                android:textColorHint="@color/LightGrey"
                android:backgroundTint="@color/White"
                android:gravity="center"
                android:hint="@string/user_text"
                android:paddingRight="25dp"
                />
        </LinearLayout>

        <!-- Separation Line between Username and Password -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"/>

        <!-- Password container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

            <!-- Password icon -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"

                android:text="&#xf023;"
                android:textSize="18sp"
                app:fontFamily="@font/fontawesome"
                android:textColor="@color/LightGrey"/>

            <!-- Password EditText-->
            <EditText
                android:id="@+id/Passwordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/MainBlue"
                android:backgroundTint="@color/White"
                android:hint="@string/password_text"
                android:textColorHint="@color/LightGrey"
                android:gravity="center"
                android:paddingRight="25dp"
                />
        </LinearLayout>

    </LinearLayout>


    <!-- Login Button + Container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_functionality"
            android:gravity="center"
            android:text="@string/button_text"
            android:textColor="@color/MainBlue"
            android:textColorHint="@color/MainBlue"

            />


    </RelativeLayout>

    <!-- Register Text Button + Container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/RegisterButton"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/White"
            android:textColorHighlight="@color/White"
            android:textColorHint="@color/White"
            android:textColorLink="@color/White"
            android:textSize="16sp"
            />
    </RelativeLayout>


        <!-- Istagram facebook about us -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp">
            <!-- Facebook icon -->
            <TextView
                android:id="@+id/facebookicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="&#xf09a;"
                android:textSize="35sp"
                app:fontFamily="@font/fontawesome"
                android:textColor="@color/White"
                android:layout_marginRight="25dp"/>

            <!-- Instagram Icon -->
            <TextView
                android:id="@+id/instagramicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="&#xf16d;"
                android:textSize="35sp"
                app:fontFamily="@font/fontawesome"
                android:textColor="@color/White"
                android:layout_marginRight="25dp"
                />

            <!-- Information Icon -->
            <TextView
                android:id="@+id/aboutusicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="&#xf05a;"
                android:textSize="35sp"
                app:fontFamily="@font/fontawesome"
                android:textColor="@color/White"

                />
        </LinearLayout>


</LinearLayout>

